@@ -1,3 +1,8 @@
+2005-02-15	Benedikt Meurer <benny@xfce.org>
+
+	* Terminal.spec.in: Add --enable-final to the configure line.
+	* configure.ac: Depend on libexo 0.3.
+
 2005-01-31	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-preferences-dialog.c: Added more tooltips.
